9report/kirei_kadai6/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI
   4           | error

   5  expr : LET var EQ expr IN expr
   6       | LET REC var var EQ expr IN expr
   7       | IF expr THEN expr ELSE expr
   8       | FUN var ARROW expr
   9       | arith_expr EQ arith_expr
  10       | arith_expr LT arith_expr
  11       | MATCH expr WITH cases
  12       | MATCH expr WITH BAR cases
  13       | list_expr

  14  cases : pattern ARROW expr
  15        | pattern ARROW expr BAR cases

  16  pattern : atomic_pattern CONS pattern
  17          | atomic_pattern

  18  atomic_pattern : INT
  19                 | BOOL
  20                 | var
  21                 | LPAR pattern COMMA pattern RPAR
  22                 | LBRACKET RBRACKET
  23                 | LPAR pattern RPAR

  24  list_expr : arith_expr CONS list_expr
  25            | arith_expr

  26  arith_expr : arith_expr PLUS factor_expr
  27             | arith_expr MINUS factor_expr
  28             | factor_expr

  29  factor_expr : factor_expr TIMES app_expr
  30              | factor_expr DIV app_expr
  31              | app_expr

  32  app_expr : app_expr atomic_expr
  33           | atomic_expr

  34  atomic_expr : INT
  35              | BOOL
  36              | LPAR expr COMMA expr RPAR
  37              | LBRACKET RBRACKET
  38              | ID
  39              | LPAR expr RPAR

  40  var : ID

  41  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (41)

	error  shift 3
	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	toplevel  goto 13
	expr  goto 14
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : error .  (4)

	.  reduce 4


state 4
	atomic_expr : INT .  (34)

	.  reduce 34


state 5
	atomic_expr : BOOL .  (35)

	.  reduce 35


state 6
	atomic_expr : ID .  (38)

	.  reduce 38


state 7
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr  (6)

	ID  shift 20
	REC  shift 21
	.  error

	var  goto 22


state 8
	expr : IF . expr THEN expr ELSE expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 24
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 9
	atomic_expr : LPAR . expr COMMA expr RPAR  (36)
	atomic_expr : LPAR . expr RPAR  (39)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 25
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 10
	expr : FUN . var ARROW expr  (8)

	ID  shift 20
	.  error

	var  goto 26


state 11
	atomic_expr : LBRACKET . RBRACKET  (37)

	RBRACKET  shift 27
	.  error


state 12
	expr : MATCH . expr WITH cases  (11)
	expr : MATCH . expr WITH BAR cases  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 28
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 13
	%entry% : '\001' toplevel .  (41)

	.  reduce 41


state 14
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 29
	.  error


state 15
	expr : arith_expr . EQ arith_expr  (9)
	expr : arith_expr . LT arith_expr  (10)
	list_expr : arith_expr . CONS list_expr  (24)
	list_expr : arith_expr .  (25)
	arith_expr : arith_expr . PLUS factor_expr  (26)
	arith_expr : arith_expr . MINUS factor_expr  (27)

	PLUS  shift 30
	MINUS  shift 31
	EQ  shift 32
	LT  shift 33
	CONS  shift 34
	IN  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	RPAR  reduce 25
	COMMA  reduce 25
	WITH  reduce 25
	BAR  reduce 25
	SEMISEMI  reduce 25


state 16
	expr : list_expr .  (13)

	.  reduce 13


state 17
	arith_expr : factor_expr .  (28)
	factor_expr : factor_expr . TIMES app_expr  (29)
	factor_expr : factor_expr . DIV app_expr  (30)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	EQ  reduce 28
	LT  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	CONS  reduce 28
	COMMA  reduce 28
	WITH  reduce 28
	BAR  reduce 28
	SEMISEMI  reduce 28


state 18
	factor_expr : app_expr .  (31)
	app_expr : app_expr . atomic_expr  (32)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	IN  reduce 31
	PLUS  reduce 31
	TIMES  reduce 31
	MINUS  reduce 31
	DIV  reduce 31
	EQ  reduce 31
	LT  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	CONS  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31

	atomic_expr  goto 37


state 19
	app_expr : atomic_expr .  (33)

	.  reduce 33


state 20
	var : ID .  (40)

	.  reduce 40


state 21
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 38


state 22
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 39
	.  error


state 23
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr  (6)

	ID  shift 20
	REC  shift 40
	.  error

	var  goto 41


state 24
	expr : IF expr . THEN expr ELSE expr  (7)

	THEN  shift 42
	.  error


state 25
	atomic_expr : LPAR expr . COMMA expr RPAR  (36)
	atomic_expr : LPAR expr . RPAR  (39)

	RPAR  shift 43
	COMMA  shift 44
	.  error


state 26
	expr : FUN var . ARROW expr  (8)

	ARROW  shift 45
	.  error


state 27
	atomic_expr : LBRACKET RBRACKET .  (37)

	.  reduce 37


state 28
	expr : MATCH expr . WITH cases  (11)
	expr : MATCH expr . WITH BAR cases  (12)

	WITH  shift 46
	.  error


state 29
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 30
	arith_expr : arith_expr PLUS . factor_expr  (26)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	factor_expr  goto 47
	app_expr  goto 18
	atomic_expr  goto 19


state 31
	arith_expr : arith_expr MINUS . factor_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	factor_expr  goto 48
	app_expr  goto 18
	atomic_expr  goto 19


state 32
	expr : arith_expr EQ . arith_expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	arith_expr  goto 49
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 33
	expr : arith_expr LT . arith_expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	arith_expr  goto 50
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 34
	list_expr : arith_expr CONS . list_expr  (24)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	arith_expr  goto 51
	list_expr  goto 52
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 35
	factor_expr : factor_expr TIMES . app_expr  (29)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	app_expr  goto 53
	atomic_expr  goto 19


state 36
	factor_expr : factor_expr DIV . app_expr  (30)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	.  error

	app_expr  goto 54
	atomic_expr  goto 19


state 37
	app_expr : app_expr atomic_expr .  (32)

	.  reduce 32


state 38
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 55


state 39
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 56
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 40
	expr : LET REC . var var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 57


state 41
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 58
	.  error


state 42
	expr : IF expr THEN . expr ELSE expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 59
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 43
	atomic_expr : LPAR expr RPAR .  (39)

	.  reduce 39


state 44
	atomic_expr : LPAR expr COMMA . expr RPAR  (36)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 60
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 45
	expr : FUN var ARROW . expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 61
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 46
	expr : MATCH expr WITH . cases  (11)
	expr : MATCH expr WITH . BAR cases  (12)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	BAR  shift 66
	.  error

	var  goto 67
	cases  goto 68
	pattern  goto 69
	atomic_pattern  goto 70


state 47
	arith_expr : arith_expr PLUS factor_expr .  (26)
	factor_expr : factor_expr . TIMES app_expr  (29)
	factor_expr : factor_expr . DIV app_expr  (30)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	EQ  reduce 26
	LT  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	RPAR  reduce 26
	CONS  reduce 26
	COMMA  reduce 26
	WITH  reduce 26
	BAR  reduce 26
	SEMISEMI  reduce 26


state 48
	arith_expr : arith_expr MINUS factor_expr .  (27)
	factor_expr : factor_expr . TIMES app_expr  (29)
	factor_expr : factor_expr . DIV app_expr  (30)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	EQ  reduce 27
	LT  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	RPAR  reduce 27
	CONS  reduce 27
	COMMA  reduce 27
	WITH  reduce 27
	BAR  reduce 27
	SEMISEMI  reduce 27


state 49
	expr : arith_expr EQ arith_expr .  (9)
	arith_expr : arith_expr . PLUS factor_expr  (26)
	arith_expr : arith_expr . MINUS factor_expr  (27)

	PLUS  shift 30
	MINUS  shift 31
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	COMMA  reduce 9
	WITH  reduce 9
	BAR  reduce 9
	SEMISEMI  reduce 9


state 50
	expr : arith_expr LT arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (26)
	arith_expr : arith_expr . MINUS factor_expr  (27)

	PLUS  shift 30
	MINUS  shift 31
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	COMMA  reduce 10
	WITH  reduce 10
	BAR  reduce 10
	SEMISEMI  reduce 10


state 51
	list_expr : arith_expr . CONS list_expr  (24)
	list_expr : arith_expr .  (25)
	arith_expr : arith_expr . PLUS factor_expr  (26)
	arith_expr : arith_expr . MINUS factor_expr  (27)

	PLUS  shift 30
	MINUS  shift 31
	CONS  shift 34
	IN  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	RPAR  reduce 25
	COMMA  reduce 25
	WITH  reduce 25
	BAR  reduce 25
	SEMISEMI  reduce 25


state 52
	list_expr : arith_expr CONS list_expr .  (24)

	.  reduce 24


state 53
	factor_expr : factor_expr TIMES app_expr .  (29)
	app_expr : app_expr . atomic_expr  (32)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	IN  reduce 29
	PLUS  reduce 29
	TIMES  reduce 29
	MINUS  reduce 29
	DIV  reduce 29
	EQ  reduce 29
	LT  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	CONS  reduce 29
	COMMA  reduce 29
	WITH  reduce 29
	BAR  reduce 29
	SEMISEMI  reduce 29

	atomic_expr  goto 37


state 54
	factor_expr : factor_expr DIV app_expr .  (30)
	app_expr : app_expr . atomic_expr  (32)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 11
	IN  reduce 30
	PLUS  reduce 30
	TIMES  reduce 30
	MINUS  reduce 30
	DIV  reduce 30
	EQ  reduce 30
	LT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	RPAR  reduce 30
	CONS  reduce 30
	COMMA  reduce 30
	WITH  reduce 30
	BAR  reduce 30
	SEMISEMI  reduce 30

	atomic_expr  goto 37


state 55
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr  (6)

	EQ  shift 71
	.  error


state 56
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 72
	SEMISEMI  shift 73
	.  error


state 57
	expr : LET REC var . var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 74


state 58
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 75
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 59
	expr : IF expr THEN expr . ELSE expr  (7)

	ELSE  shift 76
	.  error


state 60
	atomic_expr : LPAR expr COMMA expr . RPAR  (36)

	RPAR  shift 77
	.  error


state 61
	expr : FUN var ARROW expr .  (8)

	.  reduce 8


state 62
	atomic_pattern : INT .  (18)

	.  reduce 18


state 63
	atomic_pattern : BOOL .  (19)

	.  reduce 19


state 64
	atomic_pattern : LPAR . pattern COMMA pattern RPAR  (21)
	atomic_pattern : LPAR . pattern RPAR  (23)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	.  error

	var  goto 67
	pattern  goto 78
	atomic_pattern  goto 70


state 65
	atomic_pattern : LBRACKET . RBRACKET  (22)

	RBRACKET  shift 79
	.  error


state 66
	expr : MATCH expr WITH BAR . cases  (12)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	.  error

	var  goto 67
	cases  goto 80
	pattern  goto 69
	atomic_pattern  goto 70


state 67
	atomic_pattern : var .  (20)

	.  reduce 20


state 68
	expr : MATCH expr WITH cases .  (11)

	.  reduce 11


state 69
	cases : pattern . ARROW expr  (14)
	cases : pattern . ARROW expr BAR cases  (15)

	ARROW  shift 81
	.  error


state 70
	pattern : atomic_pattern . CONS pattern  (16)
	pattern : atomic_pattern .  (17)

	CONS  shift 82
	RPAR  reduce 17
	ARROW  reduce 17
	COMMA  reduce 17


state 71
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 83
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 72
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 84
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 73
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 74
	expr : LET REC var var . EQ expr IN expr  (6)

	EQ  shift 85
	.  error


state 75
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 72
	.  error


state 76
	expr : IF expr THEN expr ELSE . expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 86
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 77
	atomic_expr : LPAR expr COMMA expr RPAR .  (36)

	.  reduce 36


state 78
	atomic_pattern : LPAR pattern . COMMA pattern RPAR  (21)
	atomic_pattern : LPAR pattern . RPAR  (23)

	RPAR  shift 87
	COMMA  shift 88
	.  error


state 79
	atomic_pattern : LBRACKET RBRACKET .  (22)

	.  reduce 22


state 80
	expr : MATCH expr WITH BAR cases .  (12)

	.  reduce 12


state 81
	cases : pattern ARROW . expr  (14)
	cases : pattern ARROW . expr BAR cases  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 89
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 82
	pattern : atomic_pattern CONS . pattern  (16)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	.  error

	var  goto 67
	pattern  goto 90
	atomic_pattern  goto 70


state 83
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr  (6)

	IN  shift 91
	SEMISEMI  shift 92
	.  error


state 84
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 85
	expr : LET REC var var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 93
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 86
	expr : IF expr THEN expr ELSE expr .  (7)

	.  reduce 7


state 87
	atomic_pattern : LPAR pattern RPAR .  (23)

	.  reduce 23


state 88
	atomic_pattern : LPAR pattern COMMA . pattern RPAR  (21)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	.  error

	var  goto 67
	pattern  goto 94
	atomic_pattern  goto 70


89: shift/reduce conflict (shift 95, reduce 14) on BAR
state 89
	cases : pattern ARROW expr .  (14)
	cases : pattern ARROW expr . BAR cases  (15)

	BAR  shift 95
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	COMMA  reduce 14
	WITH  reduce 14
	SEMISEMI  reduce 14


state 90
	pattern : atomic_pattern CONS pattern .  (16)

	.  reduce 16


state 91
	expr : LET REC var var EQ expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 23
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 96
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 92
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 93
	expr : LET REC var var EQ expr . IN expr  (6)

	IN  shift 91
	.  error


state 94
	atomic_pattern : LPAR pattern COMMA pattern . RPAR  (21)

	RPAR  shift 97
	.  error


state 95
	cases : pattern ARROW expr BAR . cases  (15)

	INT  shift 62
	BOOL  shift 63
	ID  shift 20
	LPAR  shift 64
	LBRACKET  shift 65
	.  error

	var  goto 67
	cases  goto 98
	pattern  goto 69
	atomic_pattern  goto 70


state 96
	expr : LET REC var var EQ expr IN expr .  (6)

	.  reduce 6


state 97
	atomic_pattern : LPAR pattern COMMA pattern RPAR .  (21)

	.  reduce 21


state 98
	cases : pattern ARROW expr BAR cases .  (15)

	.  reduce 15


State 89 contains 1 shift/reduce conflict.


30 terminals, 13 nonterminals
42 grammar rules, 99 states
